www/app/stylus/components/_player.styl
@media (max-width: $medium_screen) and (orientation : portrait)
    .fs-overlay.portrait
        transform: rotate(-90deg)

@media (max-width: $medium_screen) and (orientation : landscape)
    .fs-overlay
        transform: rotate(0)

.fs-overlay, .fs-overlay *
    outline: none !important

.replay
    margin-left: -12px
.IMRPlayer
    will-change: transform
    touch-action: none
    outline: none !important;

.IMRPlayer .video-react .video-react-big-play-button
    display: none

.IMRPlayer .video-react .video-react-mouse-display, .IMRPlayer .video-react .video-react-play-progress:after
    font-family: "Roboto", sans-serif !important

// Progress Bar
.video-react-progress-control {
    position: absolute !important;
    top: -31px !important;
    width: 100% !important;
}


// Controls Container
.video-react .video-react-control-bar {
    background: transparent !important;
    opacity: 1;
    transition: opacity 400ms;
}

// Custom Buttons
.replay, .slomo {
    display: none !important;
}
.video-react-icon-fullscreen {
    position: absolute !important;
    right: 0;
    bottom: -10px;
}


// Video Duration Numbers
.video-react-duration {
    position: absolute !important;
    right: -6px;
    bottom: 40px;
    font-size: 18px !important;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, .6);
}

// Current Time Numbers
.video-react-current-time {
    position: absolute !important;
    left: -6px;
    bottom: 40px;
    font-size: 18px !important;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, .6);
}

// Play control button
.video-react-play-control {
    position: absolute !important;
    width: 2em !important;
    left: 10px;
    top: 12px;
    z-index: 2001;
}

// Time Divider
.video-react-time-divider {
    display: none;
}

// Volume
.video-react-volume-menu-button-horizontal {
    position: absolute !important;
    display: none;
    left: 60px;
    top: 13px;
}

.minimized .video-react-control-bar {
    opacity: 0 !important;
}

// Icons
.video-react .video-react-control:before {
    font-size: 1.4em !important;
}

.video-react-control-bar .material-icons
    color: white !important
    font-size: 32px !important

.highlights {
    position: absolute !important;
    right: 20px;
}


.pre-play-overlay {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    .gradient-overlay {
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 120px;
        z-index: 2000;
        pointer-events: none;
        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0, 0, 0, 1) 100%); /* FF3.6-15 */
        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 1) 100%); /* Chrome10-25,Safari5.1-6 */
        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    }

    .play-button {
        position: absolute;
        color: white;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 2000;
        pointer-events: none;

        i {
            font-size: 46px;
            text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
        }
    }

    .close-button {
        position: absolute;
        top: 20px;
        left: 20px;
        z-index: 2000;
        //font-size: 32px;
    }
    
}

.close-button {
    color: white;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
    //font-size: 32px;
}

